--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Instant_Store</string>
+    <string name="title_activity_login">Sign in</string>
 </resources>
