--- a/feature_app/src/main/res/values/strings.xml
+++ b/feature_app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
+    <string name="txtHintPassword">Password</string>
+    <string name="txtHintEmail">Email</string>
+    <string name="btnLogin">Login</string>
 </resources>
