land login activity

--- a/feature_app/src/main/res/values/strings.xml
+++ b/feature_app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="txtHintPassword">Password</string>
     <string name="txtHintEmail">Email</string>
     <string name="btnLogin">Login</string>
+    <string name="btncadastr">Sign Up</string>
 </resources>
