--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Instant_Store</string>
     <string name="title_activity_login">Sign in</string>
+    <string name="title_activity_settings">Settings</string>
 </resources>
