--- a/feature_app/src/main/res/values/strings.xml
+++ b/feature_app/src/main/res/values/strings.xml
@@ -1,16 +1,9 @@
 <resources>
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
     <string name="txtHintPassword">Password</string>
     <string name="txtHintEmail">Email</string>
-    <string name="btnLogin">Login</string>
+    <string name="btnlogin">Login</string>
     <string name="btncadastr">Sign Up</string>
+    <string name="menu_action_settings">Settings</string>
+    <string name="menu_action_about_us">About us</string>
 </resources>
