--- a/feature_app/src/main/res/values/strings.xml
+++ b/feature_app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="btncadastr">Sign Up</string>
     <string name="menu_action_settings">Settings</string>
     <string name="menu_action_about_us">About us</string>
+    <string name="message">Message</string>
+    <string name="nav_open">Nav Bar open</string>
+    <string name="nav_close">Nav Bar close</string>
 </resources>
