--- a/feature_app/src/main/res/values/strings.xml
+++ b/feature_app/src/main/res/values/strings.xml
@@ -6,7 +6,10 @@
     <string name="btncadastr">Sign Up</string>
     <string name="menu_action_settings">Settings</string>
     <string name="menu_action_about_us">About us</string>
-    <string name="message">Message</string>
+    <string name="demand">Demand</string>
     <string name="nav_open">Nav Bar open</string>
     <string name="nav_close">Nav Bar close</string>
+    <string name="home">Home</string>
+    <string name="tv_loginhere">Login Here</string>
+    <string name="btnlogg">Login with Google</string>
 </resources>
