Tela de Cadastro com insternacionalizacao e landyscape variation

--- a/feature_app/src/main/res/values-en/strings.xml
+++ b/feature_app/src/main/res/values-en/strings.xml
@@ -12,4 +12,8 @@
     <string name="home">Home</string>
     <string name="tv_loginhere">Login Here</string>
     <string name="btnlogg">Login with Google</string>
+    <string name="tvsign_up">Sign Up</string>
+    <string name="tvconfirm_password">Confirm Password</string>
+    <string name="tvusername">User Name</string>
+    <string name="btnsign_up_with_google">Sign Up with Google</string>
 </resources>
