--- a/feature_app/src/main/res/values-pt/strings.xml
+++ b/feature_app/src/main/res/values-pt/strings.xml
@@ -12,4 +12,8 @@
     <string name="home">Inicio</string>
     <string name="tv_loginhere">Faça seu Login aqui:</string>
     <string name="btnlogg">Login com Google</string>
+    <string name="tvsign_up">Cadastrar</string>
+    <string name="tvconfirm_password">Confirme sua Senha</string>
+    <string name="tvusername">Nome do usuário</string>
+    <string name="btnsign_up_with_google">Cadastre com Google</string>
 </resources>
