tentando colocar o fragmento de conf

--- a/feature_app/src/main/res/values-pt/strings.xml
+++ b/feature_app/src/main/res/values-pt/strings.xml
@@ -19,5 +19,5 @@
     <string name="tvTitlAbout">Instant Store inc.</string>
     <string name="tvgitCaio">\@caiocbv</string>
     <string name="tvgitMat">\@MattLack</string>
-    <string name="tvTxtAb">Desenvolvido para a disciplina de Desenvolvimento Mobile - UFRPE 2018.2</string>
+    <string name="tvTxtAb">Desenvolvido para a disciplina de Desenvolvimento de Aplicações Móveis - UFRPE 2018.2</string>
 </resources>
