--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -29,4 +29,5 @@
     <string name="upload_image">Upload Image</string>
     <string name="hint_emailform">Your e-mail</string>
     <string name="hint_phoneform">Your phone</string>
+    <string name="btn_choseImage">Chose a Image</string>
 </resources>
