--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="btn_photoform">Send your order</string>
     <string name="upload_image">Upload Image</string>
     <string name="btn_choseImage">Chose a Image</string>
+    <string name="upload">Upload</string>
 </resources>
