--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -31,4 +31,5 @@
     <string name="hint_phoneform">Your phone</string>
     <string name="btn_choseImage">Chose a Image</string>
     <string name="upload">Upload</string>
+    <string name="btn_return">Return to Home</string>
 </resources>
