--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="upload_image">Upload Image</string>
     <string name="btn_choseImage">Chose a Image</string>
     <string name="upload">Upload</string>
+    <string name="btn_return">Return to Home</string>
 </resources>
