--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -29,8 +29,8 @@
     <string name="upload_image">Upload Image</string>
     <string name="hint_emailform">Your e-mail</string>
     <string name="hint_phoneform">Your phone</string>
-    <string name="btn_choseImage">Chose a Image</string>
     <string name="upload">Upload</string>
     <string name="btn_return">Return to Home</string>
     <string name="comment">Add a comment</string>
+    <string name="conf_logout">Logout</string>
 </resources>
