--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,8 +30,8 @@
     <string name="hint_phoneform">Your phone</string>
     <string name="btn_photoform">Send your order</string>
     <string name="upload_image">Upload Image</string>
-    <string name="btn_choseImage">Chose a Image</string>
     <string name="upload">Upload</string>
     <string name="btn_return">Return to Home</string>
     <string name="comment">Add a comment</string>
+    <string name="conf_logout">Logout</string>
 </resources>
