--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="btn_return">Return to Home</string>
     <string name="comment">Add a comment</string>
     <string name="conf_logout">Logout</string>
+    <string name="btnsubmit">Submit</string>
 </resources>
