--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -37,4 +37,5 @@
     <string name="tv_NClient">Client e-mail:</string>
     <string name="tv_NCphone">Client Phone number:</string>
     <string name="tv_NComent">Client Comentary:</string>
+    <string name="tv_authorN">Seller:</string>
 </resources>
