--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -37,4 +37,5 @@
     <string name="tv_NClient">E-mail do Cliente:</string>
     <string name="btnsubmit">Enviar</string>
     <string name="tv_NComent">"Comentário do Cliente: "</string>
+    <string name="tv_authorN">Vendedor:</string>
 </resources>
